[package]
name = "skinresolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
async-trait = "0.1.73"
once_cell = "1.18.0"
rayon = "1.7.0"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.31.0", features = ["full"] }
